Alterações técnicas: • ChatViewModel.kt: Adicionado suporte para verificar a preferência de visibilidade global. • MainActivity.kt: Atualizada a lista de chats e contatos para exibir as cores de presença corretamente (Online, Ocupado, Ausente). • FriendApplication.kt: Adicionada uma instância global para facilitar o acesso ao contexto e preferências de sistema. Aqui está como os status aparecem agora: • 🟢 Online: Disponível para conversar. • 🔴 Ocupado: No app, mas pode demorar a responder. • 🟡 Ausente: App aberto mas em segundo plano ou inativo. • ⚪ Invisível/Offline: Aparece como desconectado para todos. As alterações foram aplicadas e o sistema de presença agora deve ser consistente em todo o aplicativo.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
     <uses-feature android:name="android.hardware.microphone" android:required="false" />
 
     <application
+        android:name=".FriendApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -47,6 +48,15 @@
             android:name=".MessagingService"
             android:exported="false"
             android:foregroundServiceType="remoteMessaging" />
+
+        <receiver
+            android:name=".CallActionReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="ACTION_ACCEPT" />
+                <action android:name="ACTION_REJECT" />
+            </intent-filter>
+        </receiver>
 
         <!-- SERVIÇO FCM PRINCIPAL PARA RECEBER MENSAGENS -->
         <service
