--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_PHONE_CALL" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_REMOTE_MESSAGING" />
     <uses-permission android:name="android.permission.MANAGE_OWN_CALLS" />
 
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
@@ -44,11 +43,6 @@
         android:theme="@style/Theme.Friend"
         android:extractNativeLibs="true">
 
-        <service
-            android:name=".MessagingService"
-            android:exported="false"
-            android:foregroundServiceType="remoteMessaging" />
-
         <receiver
             android:name=".CallActionReceiver"
             android:exported="false">
@@ -58,7 +52,12 @@
             </intent-filter>
         </receiver>
 
-        <!-- SERVIÇO FCM PRINCIPAL PARA RECEBER MENSAGENS -->
+        <!-- RECEIVER PARA RESPOSTA DIRETA DA NOTIFICAÇÃO -->
+        <receiver
+            android:name=".ReplyReceiver"
+            android:exported="false" />
+
+        <!-- SERVIÇO FCM PRINCIPAL PARA RECEBER MENSAGENS E CHAMADAS -->
         <service
             android:name=".FriendMessagingService"
             android:exported="false">
